[package]
name = "monitoring-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
systemstat = "0.2"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
gethostname = "0.4.3"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"